# naming-game-thesis

./: .gitignore  README.md  analysis.py  background_main-20260120201925.pid  background_main-20260124174124.pid  background_main.pid  base_game.py  error_log.txt  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py  game.py  main.py  model.py  monte_carlo_results.npy  plot_stats.py  pyproject.toml  run_script.sh  utils.py
analysis/: analysis.py  baseline.py  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py
games/: base_game.py  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py
logs/: background_base_game-2026-01-26_03-33-44.pid
src/analysis/: base_game.py  baseline.py  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py  laws.py
src/games/: base_game.py  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py
src/simulations/: base_game.py  fuzzy_object.py  fuzzy_word.py  fuzzy_word_object.py  parameters.py  profile_game.py
src/utils/: __init__.py
